--- a/Dashboard/home/table.html
+++ b/Dashboard/home/table.html
@@ -35,7 +35,7 @@
 
 <body>
     <div class="wrapper">
-        <div class="sidebar" data-image="../assets/img/sidebar-5.jpg">
+        <div class="sidebar" data-image="../assets/img/sidebar-5.jpg" data-color="blue">
             <!--
         Tip 1: You can change the color of the sidebar using: data-color="purple | blue | green | orange | red"
 
