Added filter - it kinda works

--- a/Fare_Plot/index.html
+++ b/Fare_Plot/index.html
@@ -2,10 +2,12 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>Hair Metal</title>
+		<title>Likelihood of Survival vs. Ticket Price</title>
 		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	<body>
+		<!-- Initialize a select button -->
+		<select id="selectButton"></select>
 		<div class="chart">
 		</div>
 		<script src="https://d3js.org/d3.v5.min.js"></script>
