--- a/Dashboard/home/dashboard.html
+++ b/Dashboard/home/dashboard.html
@@ -30,7 +30,9 @@
     <link href="../assets/css/bootstrap.min.css" rel="stylesheet" />
     <link href="../assets/css/light-bootstrap-dashboard.css?v=2.0.0 " rel="stylesheet" />
     <!-- CSS Just for demo purpose, don't include it in your project -->
-    <link href="../assets/css/demo.css" rel="stylesheet" />
+    <link href="../assets/css/demo.css" rel="stylesheet" />\
+    <!-- Data for Emily's Age Plot-->
+    <link rel="stylesheet" href="../../Age_Plot/style.css">
     <!-- Sarah's Sankey Diagram -->
     <script src="../assets/js/sankey.js"></script>
     <!--Load the AJAX API-->
@@ -43,6 +45,10 @@
       // Set a callback to run when the Google Visualization API is loaded.
       google.charts.setOnLoadCallback(drawChart);
       </script>
+          <!-- Emily's Script Files-->
+    <script src="http://d3js.org/d3.v5.min.js" charset="utf-8"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.7.1/d3-tip.min.js"></script>
+    <script type = "text/javascript" src="../../Age_Plot/age_plot.js"></script>
 </head>
 
 <body>
@@ -149,16 +155,16 @@
 
                 <div class="container-fluid">
                     <div class="row">
-                        <div class="col-md-4">
+                        <div class="col-md-8">
                             <div class="card ">
                                 <div class="card-header ">
-                                    <h4 class="card-title">Survivors</h4>
-                                    <p class="card-category">Last Campaign Performance</p>
+                                    <h4 class="card-title">Chances of Survival</h4>
+                                    <p class="card-category">By Gender &</p>
                                 </div>
                                 <div class="card-body ">
                                     <div id="sankey_basic" src="../assets/js/sankey.js"></div>
                                     <!-- <div id="chartPreferences" class="ct-chart ct-perfect-fourth"></div> -->
-                                    <div class="legend">
+                                    <!-- <div class="legend">
                                         <i class="fa fa-circle text-info"></i> Open
                                         <i class="fa fa-circle text-danger"></i> Bounce
                                         <i class="fa fa-circle text-warning"></i> Unsubscribe
@@ -166,20 +172,26 @@
                                     <hr>
                                     <div class="stats">
                                         <i class="fa fa-clock-o"></i> Campaign sent 2 days ago
-                                    </div>
+                                    </div> -->
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-8">
+                        
+                    </div>
+                    <div class="row">
+                        <div class="col-md-12">
                             <div class="card ">
                                 <div class="card-header ">
-                                    <h4 class="card-title">Chances of Survival</h4>
-                                    <p class="card-category">By Gender</p>
+                                    <h4 class="card-title">Ages Plot</h4>
+                                    <p class="card-category">Place Holder</p>
                                 </div>
                                 <div class="card-body ">
-                                    <div id="sankey_basic" src="../assets/js/sankey.js"></div>
+                                    <div id="ages"></div>
+                                    <!-- Emily's Ages Plot -->
+
+                                    <!--<iframe src="../../Age_Plot/ages.html" height="710" width="1010"></iframe> -->
                                 </div>
-                                <div class="card-footer ">
+                                <!-- <div class="card-footer ">
                                     <div class="legend">
                                         <i class="fa fa-circle text-info"></i> Open
                                         <i class="fa fa-circle text-danger"></i> Click
@@ -189,21 +201,19 @@
                                     <div class="stats">
                                         <i class="fa fa-history"></i> Updated 3 minutes ago
                                     </div>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-6">
+                        <div class="col-md-8">
                             <div class="card ">
                                 <div class="card-header ">
-                                    <h4 class="card-title">2017 Sales</h4>
-                                    <p class="card-category">All products including Taxes</p>
+                                    <h4 class="card-title">Fare Plot</h4>
+                                    <p class="card-category">Place Holder</p>
                                 </div>
                                 <div class="card-body ">
-                                    <div id="chartActivity" class="ct-chart"></div>
+                                    <iframe src="../../Fare_Plot/index.html" height="710" width="1010"></iframe>
                                 </div>
-                                <div class="card-footer ">
+                                <!-- <div class="card-footer ">
                                     <div class="legend">
                                         <i class="fa fa-circle text-info"></i> Tesla Model S
                                         <i class="fa fa-circle text-danger"></i> BMW 5 Series
@@ -212,10 +222,10 @@
                                     <div class="stats">
                                         <i class="fa fa-check"></i> Data information certified
                                     </div>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
-                        <div class="col-md-6">
+                        <!-- <div class="col-md-6">
                             <div class="card  card-tasks">
                                 <div class="card-header ">
                                     <h4 class="card-title">Tasks</h4>
@@ -351,7 +361,7 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
@@ -386,6 +396,10 @@
             </footer>
         </div>
     </div>
+    <!-- Emily's Script Files-->
+    <script src="http://d3js.org/d3.v5.min.js" charset="utf-8"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.7.1/d3-tip.min.js"></script>
+    <script type = "text/javascript" src="../../Age_Plot/age_plot.js"></script>
 </body>
 <!--   Core JS Files   -->
 <script src="../assets/js/core/jquery.3.2.1.min.js" type="text/javascript"></script>
