--- a/Fare_Plot/index.html
+++ b/Fare_Plot/index.html
@@ -7,8 +7,10 @@
 	</head>
 	<body>
 		<!-- Initialize a select button -->
-		<select id="selectButton"></select>
-		<div class="chart">
+		<div class="farechart">
+		<div><select id="selectButton" class="custom-select"></select>
+		</div>
+		
 		</div>
 		<script src="https://d3js.org/d3.v5.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.7.1/d3-tip.min.js"></script>
