adding modified version of app and index

--- a/Fare_Plot/index.html
+++ b/Fare_Plot/index.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 		<!-- Initialize a select button -->
-		<div class="farechart">
+		<div id="fare">
 		<div><select id="selectButton" class="custom-select"></select>
 		</div>
 		
