Fixed x title and added zoom

--- a/Fare_Plot/index.html
+++ b/Fare_Plot/index.html
@@ -10,7 +10,11 @@
 		<div id="fare">
 		<div><select id="selectButton" class="custom-select"></select>
 		</div>
-		
+		<div class="input-form">
+			<input id="xzoom" type="number" >
+			<input id="yzoom" type="number" >
+			<input id="submit" type="submit" value="Zoom">
+		</div>
 		</div>
 		<script src="https://d3js.org/d3.v5.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.7.1/d3-tip.min.js"></script>
